@@ -1,3 +1,8 @@
+2005-01-08  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/testlet/java/lang/Package/getPackage.java (test): Check
+	whether java.lang has a package.
+
 2005-01-06  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/testlet/javax/swing/text/AbstractDocument/BranchElement/BranchElementTest.java:
